[tool.poetry]
name = "repl_nix_MUNDO-01-EXERCICIOS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
playsound = "^1.3.0"
python-vlc = "^3.0.12118"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
